<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dynamoPojo"
            type="app.assessmentdubizzle.com.modules.models.responseModel.ResultsItem"/>
    </data>
    <androidx.cardview.widget.CardView
        style="@style/YourCardView"
        android:id="@+id/cvDynamoLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_20sdp"
        app:cardUseCompatPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:paddingTop="@dimen/_2sdp"
            android:paddingBottom="@dimen/_2sdp">


            <ImageView
                android:id="@+id/ivPicture"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_2sdp"
                android:adjustViewBounds="true"
                android:padding="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                app:strokeColor="@color/white"
                app:strokeWidth="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_2sdp" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_6sdp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_medium"
                android:maxLines="2"
                android:text="@{`Product: ` + dynamoPojo.name}"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toTopOf="@+id/tvCreatedAtDate"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintStart_toEndOf="@+id/ivPicture"
                app:layout_constraintTop_toTopOf="@+id/ivPicture"
                app:layout_constraintVertical_chainStyle="packed" />


            <TextView
                android:id="@+id/tvCreatedAtDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_medium"
                android:maxLines="1"
                android:text="@{`Price: ` + dynamoPojo.price}"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintBottom_toBottomOf="@+id/ivPicture"
                app:layout_constraintEnd_toEndOf="@+id/tvTitle"
                app:layout_constraintStart_toEndOf="@+id/ivPicture"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>