...
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/txt_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toStartOf="@+id/tvNameValue"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivPicture" />

            <TextView
                android:id="@+id/tvNameValue"
...
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="@+id/tvName"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:maxLines="2"
                android:text=""
                android:textColor="@color/black"
...
